--- a/css/guide.css
+++ b/css/guide.css
@@ -1,8 +1,8 @@
 body {
-    background-color: white;
-    max-width: 100vw;
-    overflow-x: hidden;
-    overflow-y: scroll;
+	background-color: white;
+	max-width: 100vw;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 nav {
@@ -11,32 +11,32 @@ nav {
 }
 
 .nav-link {
-    transition-duration: 0.5s;
+	transition-duration: 0.5s;
 }
 
 .nav-link:hover {
-    text-shadow: 0 0 1px white;
-    color: white;
+	text-shadow: 0 0 1px white;
+	color: white;
 }
 
 #title {
-    width: 100vw;
-    animation: move-top 1.5s;
+	width: 100vw;
+	animation: move-top 1.5s;
 }
 
 #subtitle {
-    width: 100vw;
-    animation: move-left 2.5s;
+	width: 100vw;
+	animation: move-left 2.5s;
 }
 
 #side-group {
-    width: 100vw;
-    padding: 0px 20vw;
-    animation: move-right 3.5s;
+	width: 100vw;
+	padding: 0px 20vw;
+	animation: move-right 3.5s;
 }
 
 .footer-link-blue {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .footer-link-blue:hover {
@@ -45,34 +45,47 @@ nav {
 }
 
 .footer-link-grey {
-    color: gray;
-    text-decoration: none;
+	color: gray;
+	text-decoration: none;
 }
 
 .footer-link-grey:hover {
-    color: #444444;
-    text-shadow: 0 0 1px gray;
+	color: #444444;
+	text-shadow: 0 0 1px gray;
 	text-decoration: none;
 }
 
 .big-text {
-    font-size: 2.5rem;
-    font-weight: 300;
-    line-height: 1.2;
-    padding: 0px 10%;
+	font-size: 2rem;
+	font-weight: 300;
+	line-height: 1.2;
+	padding: 0px 10%;
+}
+
+.lesson-text {
+	padding: 0px 10%;
+}
+
+.lesson-code {
+	margin: 0px 10%;
+	padding: 1%;
+	tab-size: 4;
+	background-color: lightgray;
+	border-radius: 5px;
+	width: auto;
 }
   
 @keyframes move-top {
-    from { margin-top: -50vw; }
-    to { margin-top: 0vh; }
+	from { margin-top: -50vw; }
+	to { margin-top: 0vh; }
 }
 
 @keyframes move-left {
-    from { margin-left: -500vw; }
-    to { margin-left: 0vh; }
+	from { margin-left: -500vw; }
+	to { margin-left: 0vh; }
 }
 
 @keyframes move-right {
-    from { margin-left: 600vw; }
-    to { margin-left: 0vh; }
+	from { margin-left: 600vw; }
+	to { margin-left: 0vh; }
 }
