--- a/css/guide.css
+++ b/css/guide.css
@@ -11,11 +11,11 @@ nav {
 }
 
 pre {
-    white-space: pre-wrap;       /* Since CSS 2.1 */
-    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
-    white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+	white-space: pre-wrap;		/* Since CSS 2.1 */
+	white-space: -moz-pre-wrap;	/* Mozilla, since 1999 */
+	white-space: -pre-wrap;		/* Opera 4-6 */
+	white-space: -o-pre-wrap;	/* Opera 7 */
+	word-wrap: break-word;		/* Internet Explorer 5.5+ */
 }
 
 .nav-link {
@@ -41,6 +41,10 @@ pre {
 	width: 100vw;
 	padding: 0px 20vw;
 	animation: move-right 3.5s;
+}
+
+.lesson-img {
+	height: auto;
 }
 
 .footer-link-blue {
